Updated the code

--- a/Tasks/Task5_Conic_From_5_pts/Demonstration.ipynb
+++ b/Tasks/Task5_Conic_From_5_pts/Demonstration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "f96ba3f2",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "5f5beada",
    "metadata": {},
    "outputs": [],
@@ -32,38 +32,30 @@
     "\n",
     "    # We assume the equation to be A*x**2+B*y**2+C*x*y+D*x+E*y+1=0\n",
     "\n",
-    "    d = sp.Matrix()\n",
+    "    d = sp.Matrix([[x**2,x*y,y**2,x,y,1]])\n",
     "\n",
     "    for i, pt in enumerate(pts):\n",
     "        p_x, p_y = pt[0], pt[1]\n",
-    "        d = d.row_insert(i, sp.Matrix([[p_x**2, p_y**2, p_x * p_y, p_x, p_y]]))\n",
-    "\n",
-    "    d_det = d.det()\n",
-    "    coeff = []\n",
-    "    for i in range(len(pts)):\n",
-    "        d_coeff = d.copy()\n",
-    "        d_coeff.col_del(i)\n",
-    "        d_coeff = d_coeff.col_insert(i, sp.Matrix([-1, -1, -1, -1, -1]))\n",
-    "        coeff.append(d_coeff.det() / d_det)\n",
-    "\n",
-    "    return sp.Eq(coeff[0] * x**2 + coeff[1] * y**2 + coeff[2] * x * y + coeff[3] * x + coeff[4] * y + 1, 0)"
+    "        d = d.row_insert(i+1, sp.Matrix([[p_x**2, p_x * p_y, p_y**2, p_x, p_y,1]]))\n",
+    "    \n",
+    "    return sp.Eq(d.det(),0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "ebfa7633",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Some set of points\n",
-    "pts = [sp.Point(1, 1), sp.Point(2, 2), sp.Point(\n",
-    "    3, 4), sp.Point(0, 2), sp.Point(-1, 4)]"
+    "pts = [sp.Point(0, 1), sp.Point(0,0), sp.Point(\n",
+    "    3/4, 3/4), sp.Point(3/4, 1/4), sp.Point(1, 1/2)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "0ea77444",
    "metadata": {},
    "outputs": [
@@ -71,7 +63,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Eq(3*x**2/5 - 6*x/5 - y**2/10 - 3*y/10 + 1, 0)\n"
+      "Eq(9*x/512 + 9*y**2/128 - 9*y/128, 0)\n"
      ]
     }
    ],
